# replus

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CHANGES  CLAUDE.md  LICENSE  README.md  README.rst  poetry.toml  publish.sh  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  coverage.yml  release.yml
docs/: api.md  conf.py  index.md  quickstart.md  templates.md
docs/source/: classes.rst  conf.py  index.rst  quickstart.rst
docs/superpowers/plans/: 2026-07-14-replus-v1-revamp.md
docs/superpowers/specs/: 2026-07-14-engine-sub-design.md  2026-07-14-replus-v1-revamp-design.md
replus/: __init__.py  engine.py  exceptions.py  helpers.py
src/replus/: __init__.py  builder.py  engine.py  exceptions.py  loader.py  results.py
tests/: conftest.py  test_builder.py  test_loader.py  test_replus.py  test_results.py  test_sub.py  tests.py
tests/invalid_models/group/: tests.json
tests/invalid_models/special/: tests.json
tests/test_models/: date.json  date.py  repeated.json  repeated.py  tests.json  tests.py
