[tool.poetry]
name = "replus"
version = "0.3.0"
description = "A library for managing regula expressions with templates"
authors = ["Biagio Distefano <biagiodistefano92@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
regex = "^2023.8.8"
coverage = "^7.3.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
ruff = "^0.0.287"
mypy = "^1.5.1"

# linting & type checking
sphinx = "^7.2.5"
sphinx-rtd-theme = "^1.3.0"
[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.11"
disable_error_code = "union-attr"
disallow_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "tests/*",
    "playground.py",
]