[project]
name = "replus"
version = "1.0.0"
description = "Template-based regular expression management, powered by the regex library"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Biagio Distefano", email = "biagiodistefano92@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "regex>=2024.11.6",
]
keywords = ["regex", "regular-expressions", "templates", "pattern-matching", "text-extraction"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Typing :: Typed",
]

[project.urls]
Documentation = "https://replus.readthedocs.io"
Repository = "https://github.com/biagiodistefano/replus"
Changelog = "https://github.com/biagiodistefano/replus/blob/master/CHANGELOG.md"
Issues = "https://github.com/biagiodistefano/replus/issues"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-cov>=6.2",
    "ruff>=0.12",
    "ty>=0.0.59",
    "types-regex>=2026.7.10.20260711",
]
docs = [
    "sphinx>=8.2",
    "furo>=2024.8.6",
    "myst-parser>=4.0",
    "sphinx-copybutton>=0.5.2",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "PT",   # flake8-pytest-style
    "PERF", # perflint
    "RUF",  # ruff-specific
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["replus"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = [
    "@abc.abstractmethod",
]
